--- a/makeanappointment.html
+++ b/makeanappointment.html
@@ -76,7 +76,7 @@ layout: base
 
 <!--Below is code to validate the script and prevent hacked entries-->
    <script src="scripts/gen_validatorv31.js"></script>
-   <script type="text/jacascript">
+   <script type="text/javascript">
     var frmvalidator  = new Validator("3Dprintingappt");
     frmvalidator.addValidation("name","req","Please provide your name"); 
     frmvalidator.addValidation("visitor_email","req","Please provide your email"); 
