--- a/makeanappointment.html
+++ b/makeanappointment.html
@@ -50,14 +50,14 @@ layout: base
       <div class="col-form-label col-4 pt-0">Is your design course work?</div>
       <div class="col-sm">
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="classwork_1yes2no" id="gridRadios" value="option1" checked>
-          <label class="form-check-label" for="gridRadios">
+          <input class="form-check-input" type="radio" name="classwork_1yes2no" id="gridRadios1" value="option1" checked>
+          <label class="form-check-label" for="gridRadios1">
             Yes
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="classwork_1yes2no" id="gridRadios" value="option2">
-          <label class="form-check-label" for="gridRadios">
+          <input class="form-check-input" type="radio" name="classwork_1yes2no" id="gridRadios2" value="option2">
+          <label class="form-check-label" for="gridRadios2">
             No
           </label>
         </div>
