--- a/makeanappointment.html
+++ b/makeanappointment.html
@@ -8,7 +8,7 @@ layout: base
       <p>Don't forget to describe the size of your design so we can schedule your appointment accordingly.</p>
           
 <!-- HTML form code starts here-->
-<form method="post" name="3Dprintingappt" action="mailto:doakes@my.dom.edu">
+<form method="post" name="3Dprintingappt" action="/form-to-email.php">
       
   <div class="form-group">
     <label for="exampleInputEmail1">Full Name</label>
