updating design and index for custom content

--- a/design.html
+++ b/design.html
@@ -1,14 +1,15 @@
 ---
+title: "Group B Design"
 layout: base
+summary: "Design and Progress"
 ---
-
-<h2>Design and Progress</h2>
+<h3>{{ title }}</h3>
 <h4>Design Prototypes and Mockups</h4>
-<a href="images/groupb_moodboard.jpg" title="moodboard"><figure><img class="mood" src="images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure></a>
+<a href="images/groupb_moodboard.jpg" title="moodboard"><figure><img class="mood" src="images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure><br><figcaption class="figure-caption text-center">Moodboard</figcaption></a>
 
 <p>In week 8, our team put together individual mockups of how we envisioned the site. Using Slack and our Canvas group discussion board, we picked out the common elements among our individual designs to put together a group design.</p>
 
-<a href="images/groupb_mockupblue.jpg"><figure><img class="mood" src="images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure></a>
+<a href="images/groupb_mockupblue.jpg"><figure><img class="mood" src="images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure><br><figcaption class="figure-caption text-center">Mockup</figcaption></a>
 
 <p>Using the common elements from our mockups, we narrowed the process to this mockup over the next few weeks choosing the persona of a student with casual language, but adding in an element for faculty because we did not believe only one persona would use the site.</p>
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
@@ -21,7 +22,7 @@ layout: base
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
   </ol>
- 
+
   <div class="carousel-inner">
     <div class="carousel-item active">
      <a href="images/april_html.png" title="April's HTML page"><img class="d-block w-100" src="images/april_html.png" alt="April's HTML with highlighted submenu"></a>
@@ -30,7 +31,7 @@ layout: base
      <p>Submenu options adapted to final design</p>
      </div>
     </div>
-   
+
     <div class="carousel-item">
      <a href="images/danielle_html.png" title="April's HTML page"><img class="d-block w-100" src="images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
       <div class="carousel-caption d-none d-md-block">
@@ -38,7 +39,7 @@ layout: base
      <p>Navigation bar adapted to final design</p>
     </div>
    </div>
-   
+
     <div class="carousel-item">
      <a href="images/katherine_html.png" title="Katherine's HTML page"><img class="d-block w-100" src="images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
       <div class="carousel-caption d-none d-md-block">
@@ -46,7 +47,7 @@ layout: base
      <p>Feature images adapted to final design</p>
     </div>
    </div>
-   
+
     <div class="carousel-item">
      <a href="images/karla_html.png" title="Karla's HTML page"><img class="d-block w-100" src="images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
       <div class="carousel-caption d-none d-md-block">
@@ -54,7 +55,7 @@ layout: base
      <p>Group elements adapted final Bootstrap design</p>
     </div>
    </div>
-   
+
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -127,5 +128,5 @@ layout: base
 <br>
 
 <p>We used existing text and images from the original Dominican University 3D printing libguide to help make up the content, but the majority of the website did require additional research, images, and text creation. We evaluated other 3D printing websites for best techniques before putting together our final project.</p>
-  <figure><img src="https://c2.staticflickr.com/6/5635/21897207251_17580a4e0c_b.jpg" alt="flashforge orange printing example" width="576"></figure>
+  <img src="https://c2.staticflickr.com/6/5635/21897207251_17580a4e0c_b.jpg" alt="flashforge orange printing example" width="576">
 <p>We put together a usability study on our website and tested it with a random sample of people (minimum of 4).</p>
