updated title to read page.title

--- a/designs/design.html
+++ b/designs/design.html
@@ -3,7 +3,7 @@ title: "Group B Design"
 layout: base
 summary: "Design and Progress"
 ---
-<h3>{{ title }}</h3>
+<h3>{{ page.title }}</h3>
 <h4>Design Prototypes and Mockups</h4>
 <a href="images/groupb_moodboard.jpg" title="moodboard"><figure><img class="mood" src="images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure><br><figcaption class="figure-caption text-center">Moodboard</figcaption></a>
 
