--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "Welcome to the Dominican University 3D printing lab"
 layout: base
 ---
 
-<h3>{{ title }}</h3>
+<h3>{{ page.title }}</h3>
 <table>
 <tr>
 <td>
