update design and index for custom content

--- a/_designs/design.html
+++ b/_designs/design.html
@@ -1,7 +1,7 @@
 ---
-title: "Group B Design"
+title: "Design and Progress"
 layout: base
-summary: "Design and Progress"
+summary: "follow the design process of this microsite"
 ---
 <h3>{{ page.title }}</h3>
 <h4>Design Prototypes and Mockups</h4>
