update landing page

--- a/designs/index.html
+++ b/designs/index.html
@@ -1,1 +1,8 @@
-<p>For information on our design process, <a href="design.html" title="design">click here</a>.</p>
+---
+title: "Designs"
+layout: base
+---
+
+<p>This is the landing page for designs.</p>
+
+{% include design_previews.html %}
