Updated page titles & figure tags

--- a/faculty.html
+++ b/faculty.html
@@ -1,28 +1,29 @@
 ---
 layout: base
+title: "Faculty Guide"
 ---
 
-<h2>For Faculty</h2>
-  
-<figure><img src="images/landpage3Dprinter.png" width="250" height="150"></figure>
+<h2>{{page.title}}</h2>
+
+<img src="images/landpage3Dprinter.png" alt="makerbot printer">
           <p>
             3D printing is an educational technology that is valuable across multiple disciplines. The Rebecca Crown Library staff is
             here to assist faculty with incorporating 3D printing into their courses. A librarian can work with you to create
             an assignment or simply provide you students with an instruction session in the 3D lab.
           </p>
-  
+
           <h3> Liasions</h3>
           <p>
             You can speak with a library liaison for your department who can help you work with the instructional design team for a Design
             Consultation. As a team we can work together to create a project that meets the learning objectives of your course.
             3D printing is an exciting way to incorporate emerging technology into you class.
-  
+
           </p>
           <h3>Manuals</h3>
           <p>
             <p>
-              There are serveral online manuals and
-              <a href="tutor.html">Tutorials</a> for Faculty to review. </p>
+              There are several online manuals and
+              <a href="tutorial.html" title="tutorial">Tutorials</a> for Faculty to review. </p>
             <p>
               Faculty are encouraged to set-up a one-on-one instruction session in the 3D lab to get familiar with the equipment and processess.
               </p>
@@ -31,5 +32,9 @@ layout: base
               to find an appropriate project for your students.</p>
             <p>
               Learn more on the
-                    <a href="faq.html">FAQ</a> page.</p>
+                    <a href="faq.html" title="faq">FAQ</a> page.</p>
             </p>
+          <h3>Lesson Plans</h3>
+          <p>
+            <p>Each class has different needs for 3D printing. Here are some free online lesson plans that we think you will enjoy: <a href="https://3duniverse.org/tag/3d-printing-lesson-plans/" title="3Duniverse.com">3DUniverse.com</a> and <a href="http://www.instructables.com/howto/3d+printing/" title="Instructables.com">Instructables.com</a>.</p>
+          </p>
