--- a/tutorial.html
+++ b/tutorial.html
@@ -1,11 +1,11 @@
 ---
 layout: base
+title: "Tutorial"
 ---
 
-<h2>Tutorial</h2>
+<h2>{{page.title}}</h2>
 
-        <figure><img src="https://s3.amazonaws.com/libapps/accounts/13373/images/FFCX_grande.jpg" alt="FlashForge 3D printer" height="250"
-          width="350"></figure>
+        <img src="https://s3.amazonaws.com/libapps/accounts/13373/images/FFCX_grande.jpg" alt="FlashForge 3D printer" class="fixedheight">
         <h3> Step 1: Preparing your object</h3>
         <ul>
           <li>Create a model of your object</li>
@@ -16,8 +16,8 @@ layout: base
 
         <h3>Step 2: Specifications</h3>
         <ul>
-          <li> Models created in the Media Center can be printed immedialtely when time allots. If students or faculty are unable to print, files will be saved 
-             on Media Center computers as soon as possible. Email confirmations will be sent when objects are ready for pickup.</li>         
+          <li> Models created in the Media Center can be printed immedialtely when time allots. If students or faculty are unable to print, files will be saved
+             on Media Center computers as soon as possible. Email confirmations will be sent when objects are ready for pickup.</li>
           <li>All printing requests must be sent to mediacenter@dom.edu</li>
           <li>Please allow five days for processing</li>
           <li>Dominican's Media Center specifies 3D objects "must not exceeed 9 inches across, 6 inches deep, and 5.7 inches
@@ -29,9 +29,9 @@ layout: base
         <h3>Video Tutorial</h3>
         <p>The video below presents an overview of the basics of 3D printing and overall functionality</p>
         <p>
-          <a href="https://all3dp.com/best-3d-printing-tutorial/">
+          <a href="https://all3dp.com/best-3d-printing-tutorial/" title="tutorialvideo">
             <b>Best Online Tutorial</b>
           </a>
         </p>
-        <iframe width="768" height="430" src="https://www.youtube.com/embed/-Z-KsAwEwi8" frameborder="0" allow="autoplay; encrypted-media"
+        <iframe width="768" height="430" src="https://www.youtube.com/embed/-Z-KsAwEwi8" allow="autoplay; encrypted-media"
           allowfullscreen></iframe>
