--- a/faculty.html
+++ b/faculty.html
@@ -5,7 +5,7 @@ title: "Faculty Guide"
 
 <h2>{{page.title}}</h2>
 
-<img src="images/landpage3Dprinter.png" alt="makerbot printer">
+<figure><img src="images/landpage3Dprinter.png" alt="makerbot printer"></figure>
           <p>
             3D printing is an educational technology that is valuable across multiple disciplines. The Rebecca Crown Library staff is
             here to assist faculty with incorporating 3D printing into their courses. A librarian can work with you to create
