--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@ title: "Frequently Asked Questions"
     <li><a href="#11" title="a11">What kind of filament is used?</a></li>
     <li><a href="#12" title="a12">How many colors can my object be printed in?</a></li>
   </ul>
-  <img src="https://i.ytimg.com/vi/E-3dmtUEG70/maxresdefault.jpg" alt="FlashForge 3D printer in action" height="300">
+  <figure><img src="https://i.ytimg.com/vi/E-3dmtUEG70/maxresdefault.jpg" alt="FlashForge 3D printer in action" height="300"></figure><figcaption>Printer in Action</figcaption>
   <h3><a id="1">What is 3D printing?</a></h3>
   <p>3D printing refers to rapid prototyping - creating a physical 3-dimensional object from a digital model. There are several types of 3D printers. The Rebecca Crown Library has a <a href="http://www.flashforge-usa.com" title="link to flashforge" target="_blank">FLASHFORGE Creator PRO Dual Extrusion 3D Printer</a> which performs a Fused Filament Fabrication - FFF technique (also known as Fused Deposition Modeling - FDM) to create the final 3D printed object. In this method, a lightweight plastic filament is fed through the nozzle, heated up to its melting point and then extruded onto a build plate surface, hardening upon impact. This process continues depositing the melted filament layer by layer until a 3-dimensional object is formed.</p>
   <h3><a id="2">What are practical uses for 3D Printing?</a></h3>
