--- a/tutorial.html
+++ b/tutorial.html
@@ -5,7 +5,7 @@ title: "Tutorial"
 
 <h2>{{page.title}}</h2>
 
-        <img src="https://s3.amazonaws.com/libapps/accounts/13373/images/FFCX_grande.jpg" alt="FlashForge 3D printer" class="fixedheight">
+        <figure><img src="https://s3.amazonaws.com/libapps/accounts/13373/images/FFCX_grande.jpg" alt="FlashForge 3D printer" class="fixedheight"></figure><figcaption>Flashforge 3D Printer</figcaption>
         <h3> Step 1: Preparing your object</h3>
         <ul>
           <li>Create a model of your object</li>
