added new layout for design pages

--- a/_designs/designprogress.html
+++ b/_designs/designprogress.html
@@ -1,6 +1,6 @@
 ---
 title: "Design and Progress"
-layout: base
+layout: design
 summary: "follow the design process of this microsite"
 ---
 <h3>{{ page.title }}</h3>
