--- a/_designs/usability.html
+++ b/_designs/usability.html
@@ -1,6 +1,6 @@
 ---
 title: "Usability Study"
-layout: base
+layout: design
 summary: "Information about the Usability Study conducted on this site"
 ---
 <p>Usability page data will go here</p>
