--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@ layout: base
 </tr>
 </table>
 <section name="designelements">
+  <h3>Design and Testing Elements</h3>
 {% include design_previews.html %}
 </section>
