--- a/designs/index.html
+++ b/designs/index.html
@@ -3,6 +3,9 @@ title: "Designs"
 layout: base
 ---
 
-<p>This is the landing page for designs.</p>
+<p>This is the landing page for designs. You can find links to the pages created about designs here.</p>
 
 {% include design_previews.html %}
+
+<p><a href="https://domlis786.github.io/groupb-wk14/designs/designprogress.html" title="design progress">For information about the design and progress click here</a></p>
+<p><a href="https://domlis786.github.io/groupb-wk14/designs/usability.html" title="usability">For information about the usability study click here</a></p>
