updated image links for design directory pages

--- a/_designs/designprogress.html
+++ b/_designs/designprogress.html
@@ -1,15 +1,15 @@
 ---
 title: "Design and Progress"
-layout: design
+layout: base
 summary: "follow the design process of this microsite"
 ---
 <h3>{{ page.title }}</h3>
 <h4>Design Prototypes and Mockups</h4>
-<a href="../images/groupb_moodboard.jpg" title="moodboard"><figure><img class="mood" src="../images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure><br><figcaption class="figure-caption text-center">Moodboard</figcaption></a>
+<a href="../../images/groupb_moodboard.jpg" title="moodboard"><figure><img class="mood" src="../../images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure><br><figcaption class="figure-caption text-center">Moodboard</figcaption></a>
 
 <p>In week 8, our team put together individual mockups of how we envisioned the site. Using Slack and our Canvas group discussion board, we picked out the common elements among our individual designs to put together a group design.</p>
 
-<a href="../images/groupb_mockupblue.jpg"><figure><img class="mood" src="../images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure><br><figcaption class="figure-caption text-center">Mockup</figcaption></a>
+<a href="../../images/groupb_mockupblue.jpg"><figure><img class="mood" src="../../images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure><br><figcaption class="figure-caption text-center">Mockup</figcaption></a>
 
 <p>Using the common elements from our mockups, we narrowed the process to this mockup over the next few weeks choosing the persona of a student with casual language, but adding in an element for faculty because we did not believe only one persona would use the site.</p>
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
@@ -25,7 +25,7 @@ summary: "follow the design process of this microsite"
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-     <a href="../images/april_html.png" title="April's HTML page"><img class="d-block w-100" src="../images/april_html.png" alt="April's HTML with highlighted submenu"></a>
+     <a href="../../images/april_html.png" title="April's HTML page"><img class="d-block w-100" src="../../images/april_html.png" alt="April's HTML with highlighted submenu"></a>
      <div class="carousel-caption d-none d-md-block">
      <h4>April's HTML Page</h4>
      <p>Submenu options adapted to final design</p>
