updated image tags in carousel of design progress page and in base layout

--- a/_designs/designprogress.html
+++ b/_designs/designprogress.html
@@ -33,7 +33,7 @@ summary: "follow the design process of this microsite"
     </div>
 
     <div class="carousel-item">
-     <a href="../images/danielle_html.png" title="April's HTML page"><img class="d-block w-100" src="../images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
+     <a href="../../images/danielle_html.png" title="April's HTML page"><img class="d-block w-100" src="../../images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Danielle's HTML Page</h4>
      <p>Navigation bar adapted to final design</p>
@@ -41,7 +41,7 @@ summary: "follow the design process of this microsite"
    </div>
 
     <div class="carousel-item">
-     <a href="../images/katherine_html.png" title="Katherine's HTML page"><img class="d-block w-100" src="../images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
+     <a href="../../images/katherine_html.png" title="Katherine's HTML page"><img class="d-block w-100" src="../../images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Katherine's HTML Page</h4>
      <p>Feature images adapted to final design</p>
@@ -49,7 +49,7 @@ summary: "follow the design process of this microsite"
    </div>
 
     <div class="carousel-item">
-     <a href="../images/karla_html.png" title="Karla's HTML page"><img class="d-block w-100" src="../images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
+     <a href="../../images/karla_html.png" title="Karla's HTML page"><img class="d-block w-100" src="../../images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Karla's HTML Page</h4>
      <p>Group elements adapted final Bootstrap design</p>
@@ -78,7 +78,7 @@ summary: "follow the design process of this microsite"
 <p>This home page table was created using our mockup. We have changed the subject content and instead of using an updated post, we have made a mini sitemap that explains how to navigate our site. If this site is implemented, that can be changed to a post feature.</p>
 </td>
   <td>
-<figure><a href="../images/homepage_table.pdf" title="Homepage Table PDF"><img class="thumbnail" src="../images/homepage_table.png" alt="Homepage Table" width="400"></a>
+<figure><a href="../../images/homepage_table.pdf" title="Homepage Table PDF"><img class="thumbnail" src="../../images/homepage_table.png" alt="Homepage Table" width="400"></a>
 <figcaption class="figure-caption text-center">Homepage Table <br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -88,7 +88,7 @@ summary: "follow the design process of this microsite"
 <p>This is the tutorial page table created by Katherine. All priorities executed as planned.</p>
 </td>
   <td>
-<figure><a href="../images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="../images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table"></a>
+<figure><a href="../../images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="../../images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table"></a>
 <figcaption class="figure-caption text-center">Printing Tutorial Page Table <br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -98,7 +98,7 @@ summary: "follow the design process of this microsite"
 <p>This is the FAQ page table created by Danielle. Priority 1 achieved- page has list of questions and links to # on page for answer. Priority 2 changed- live help in aside was postponed due to time constraints in coding. Priority 3 achieved- common nav bar completed using Jekyll layout. Priority 4 achieved- hours completed, located in footer.</p>
 </td>
   <td>
-<figure><a href="../images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="../images/faq_Danielle.png" alt="FAQ Page Table PDF"></a>
+<figure><a href="../../images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="../../images/faq_Danielle.png" alt="FAQ Page Table PDF"></a>
 <figcaption class="figure-caption text-center">FAQ Page Table<br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -108,7 +108,7 @@ summary: "follow the design process of this microsite"
 <p>This is the faculty page table created by April.</p>
 </td>
 <td>
-<figure><a href="../images/faculty_April.pdf" title="Faculty Page Table PDF"><img class="thumbnail" src="../images/facultypagetable.png" alt="Faculty Page Table"></a>
+<figure><a href="../../images/faculty_April.pdf" title="Faculty Page Table PDF"><img class="thumbnail" src="../../images/facultypagetable.png" alt="Faculty Page Table"></a>
 <figcaption class="figure-caption text-center">Faculty Page Table<br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -118,7 +118,7 @@ summary: "follow the design process of this microsite"
 <p>This is the appointment page table created by Karla. Priority 1 achieved- additional fields added. Priority 2 changed- Gallery added to Jekyll layout. Social media accounts not created; could be added to aside or footer if site is implemented in future.</p>
 </td>
   <td>
-<figure><a href="../images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="../images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"></a>
+<figure><a href="../../images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="../../images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"></a>
 <figcaption class="figure-caption text-center">Make an Appointment Page Table<br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
