--- a/_designs/usability.html
+++ b/_designs/usability.html
@@ -1,6 +1,7 @@
 ---
 title: "Usability Study"
-layout: design
+layout: base
 summary: "Information about the Usability Study conducted on this site"
 ---
-<p>Usability page data will go here</p>
+<p>Usability page data will go here.<br>
+Remember all images placed here will have to read ../../images/image.jpg to be viewed.</p>
