updated design landing page

--- a/designs/index.html
+++ b/designs/index.html
@@ -7,5 +7,5 @@ layout: base
 
 {% include design_previews.html %}
 
-<p><a href="https://domlis786.github.io/groupb-wk14/_designs/designprogress.html" title="design progress">For information about the design and progress click here</a></p>
-<p><a href="https://domlis786.github.io/groupb-wk14/_designs/usability.html" title="usability">For information about the usability study click here</a></p>
+<p><a href="https://domlis786.github.io/groupb-wk14/designs/designprogress" title="design progress">For information about the design and progress click here</a></p>
+<p><a href="https://domlis786.github.io/groupb-wk14/designs/usability" title="usability">For information about the usability study click here</a></p>
