--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ layout: base
   <p><a href="http://www.dom.edu/" title="Dominican University website" target="new">Dominican University</a> is located at <a href="https://goo.gl/maps/xwoiWs8G5c42" title="map">7900 West Division St., River Forest, IL 60305</a>. The 3D printing lab is located in the Media Center of the Rebecca Crown Library.</p>
 </td>
 <td>
-<p><figure><img src="https://libapps.s3.amazonaws.com/accounts/13369/images/bluerobot.JPG" alt="student project blue robot" height="300"></figure><figcaption>Blue Robot</figcaption></p>
+<figure><img src="https://libapps.s3.amazonaws.com/accounts/13369/images/bluerobot.JPG" alt="student project blue robot" height="300"></figure>
 </td>
 </tr>
 </table>
-<section name="designelements">
+<section>
   <h3>Design and Testing Elements</h3>
 {% include design_previews.html %}
 </section>
