update remove figcaption and iframe allow on tutorial

--- a/tutorial.html
+++ b/tutorial.html
@@ -5,7 +5,7 @@ title: "Tutorial"
 
 <h2>{{page.title}}</h2>
 
-        <figure><img src="https://s3.amazonaws.com/libapps/accounts/13373/images/FFCX_grande.jpg" alt="FlashForge 3D printer" class="fixedheight"></figure><figcaption>Flashforge 3D Printer</figcaption>
+        <figure><img src="https://s3.amazonaws.com/libapps/accounts/13373/images/FFCX_grande.jpg" alt="FlashForge 3D printer" class="fixedheight"></figure>
         <h3> Step 1: Preparing your object</h3>
         <ul>
           <li>Create a model of your object</li>
@@ -33,5 +33,4 @@ title: "Tutorial"
             <b>Best Online Tutorial</b>
           </a>
         </p>
-        <iframe width="768" height="430" src="https://www.youtube.com/embed/-Z-KsAwEwi8" allow="autoplay; encrypted-media"
-          allowfullscreen></iframe>
+        <iframe width="768" height="430" src="https://www.youtube.com/embed/-Z-KsAwEwi8"></iframe>
