--- a/faculty.html
+++ b/faculty.html
@@ -17,24 +17,22 @@ title: "Faculty Guide"
             You can speak with a library liaison for your department who can help you work with the instructional design team for a Design
             Consultation. As a team we can work together to create a project that meets the learning objectives of your course.
             3D printing is an exciting way to incorporate emerging technology into you class.
-
           </p>
           <h3>Manuals</h3>
-          <p>
             <p>
               There are several online manuals and
-              <a href="tutorial.html" title="tutorial">Tutorials</a> for Faculty to review. </p>
+              <a href="tutorial.html" title="tutorial">Tutorials</a> for Faculty to review.
+            </p>
             <p>
               Faculty are encouraged to set-up a one-on-one instruction session in the 3D lab to get familiar with the equipment and processess.
-              </p>
+            </p>
             <p>
               A Design Consultation with the Instructional Design team will help you review your learning objectives and course content
-              to find an appropriate project for your students.</p>
+              to find an appropriate project for your students.
+            </p>
             <p>
               Learn more on the
-                    <a href="faq.html" title="faq">FAQ</a> page.</p>
+                    <a href="faq.html" title="faq">FAQ</a> page.
             </p>
           <h3>Lesson Plans</h3>
-          <p>
             <p>Each class has different needs for 3D printing. Here are some free online lesson plans that we think you will enjoy: <a href="https://3duniverse.org/tag/3d-printing-lesson-plans/" title="3Duniverse.com">3DUniverse.com</a> and <a href="http://www.instructables.com/howto/3d+printing/" title="Instructables.com">Instructables.com</a>.</p>
-          </p>
