--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ layout: base
 </tr>
 </table>
 <section>
-  <h3>Design and Testing Elements</h3>
+  <h3><a href="https://domlis786.github.io/groupb-wk14/designs/" title="design landing page">Design and Testing Elements</a></h3>
 {% include design_previews.html %}
 </section>
