--- a/tutorial.html
+++ b/tutorial.html
@@ -10,7 +10,7 @@ title: "Tutorial"
         <ul>
           <li>Create a model of your object</li>
           <li>Make an appointment with Dominican's Media Center to download previously created objects.</li>
-          <li>2 hour blocks designated for appointments</li>
+          <li>2 hour blocks are designated for appointments</li>
           <li> Create objects of your selection and save as .STL or .OBJ files</li>
         </ul>
 
@@ -25,6 +25,13 @@ title: "Tutorial"
           </li>
         </ul>
         <br>
+
+        <h3> Saving Copies</h3>
+        <ul>
+          <li> Files submitted will be deleted after printing is complete. Remember all objects are "printed as is." If troubleshooting is required, contact the Media  staff for assistance. A complete object does not indicate a perfect one; notifications will be sent if this occurs. </li>
+          <li>Should printing fails because of hardware reasons or an .STL file, a second attempt will made or we can assist with fixing these files and you can print again.
+        </li>
+      </ul>
 
         <h3>Video Tutorial</h3>
         <p>The video below presents an overview of the basics of 3D printing and overall functionality</p>
