added video to faculty page re:content tables

--- a/faculty.html
+++ b/faculty.html
@@ -30,6 +30,9 @@ title: "Faculty Guide"
               A Design Consultation with the Instructional Design team will help you review your learning objectives and course content
               to find an appropriate project for your students.
             </p>
+            <h3>Video </h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/urjIMfXfxs8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <p>3D printing is already being used at universities across the country for course work. In the above video Dr. Marlo Steed, education faculty at the University of Louisville, explains how 3D printing is a tool that helps students explore and experience new and existing concepts. 3D printing is a tactile learning tool that can helps students visualize concepts in the classroom. 3D printing is a great tool to help the students of our visual culture access curriculums at the university level.</p>
             <p>
               Learn more on the
                     <a href="faq.html" title="faq">FAQ</a> page.
