updated my portion of the content tables

--- a/_designs/designprogress.html
+++ b/_designs/designprogress.html
@@ -105,7 +105,7 @@ summary: "follow the design process of this microsite"
 </tr>
 <tr>
 <td>
-<p>This is the faculty page table created by April.</p>
+<p>This is the faculty page table created by April. The content for Priority 1 has changed. A list of disciplines that are currently using 3D printing technology has been provided on the FAQ page.  A video from a university ustilizing 3D printing will be included on the page instead of a an article. Links to instruction and lesson plan sites were added by group members.  </p>
 </td>
 <td>
 <figure><a href="../../images/faculty_April.pdf" title="Faculty Page Table PDF"><img class="thumbnail" src="../../images/facultypagetable.png" alt="Faculty Page Table"></a>
