--- a/tutorial.html
+++ b/tutorial.html
@@ -27,8 +27,8 @@ title: "Tutorial"
         <br>
         <h3> Saving Copies</h3>
         <ul>
-          <li> Files submitted will be deleted after printing is complete. Remember all objects are "printed as is." If troubleshooting is required, contact the Media  staff for assistance. A complete object does not indicate a perfect one; notifications will be sent if this occurs. </li>
-          <li>Should printing fails because of hardware reasons or an .STL file, a second attempt will made or we can assist with fixing these files and you can print again.
+          <li> Files submitted will be deleted after printing is complete. Remember all objects are "printed as is." If troubleshooting is required, contact the Media Center for assistance. A complete object does not indicate a perfect one; notifications will be sent when imperfections occur. </li>
+          <li>Should printing fail because of hardware reasons or an .STL file, a second attempt will made and files corrected to enable printing. 
         </li>
       </ul>
 
