--- a/designs/index.html
+++ b/designs/index.html
@@ -2,7 +2,9 @@
 title: "Designs"
 layout: base
 ---
-
+<section aria-labelledby="DesignsPage">
+  <h2 id="DesignsgPage">Designs Landing Page</h2>
+  
 <p>This is the landing page for designs. You can find links to the pages created about designs here.</p>
 
 {% include design_previews.html %}
