--- a/_designs/designprogress.html
+++ b/_designs/designprogress.html
@@ -4,13 +4,13 @@ layout: base
 summary: "follow the design process of this microsite"
 ---
 <h2>{{ page.title }}</h2>
-<h3>Design Prototypes and Mockups</h3>
+<h3>Prototypes</h3>
+<p>In week 8, our team put together individual mockups of how we envisioned the site. Using Slack and our Canvas group discussion board, we picked out the common elements among our individual designs to put together a group design.</p>
 <a href="../../images/groupb_moodboard.jpg" title="moodboard"><figure><img class="mood" src="../../images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure></a>
 
-<p>In week 8, our team put together individual mockups of how we envisioned the site. Using Slack and our Canvas group discussion board, we picked out the common elements among our individual designs to put together a group design.</p>
 
 <a href="../../images/groupb_mockupblue.jpg"><figure><img class="mood" src="../../images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure></a>
-
+<h3>Mockups</h3>
 <p>Using the common elements from our mockups, we narrowed the process to this mockup over the next few weeks choosing the persona of a student with casual language, but adding in an element for faculty because we did not believe only one persona would use the site.</p>
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
 
