adding content to  usability page

--- a/_designs/usability.html
+++ b/_designs/usability.html
@@ -5,6 +5,7 @@ summary: "Information about the Usability Study conducted on this site"
 ---
 <h2>{{ page.title }}</h2>
 <h3>Methods</h3>
+For the usability test all participants were sent a link to the Group B website and a link to the anonymous Google survey. After navigating through site participants were asked to complete the survey. Subjects were also asked if they had any additional feedback about the website, specifically the navigation, design, and content. There were provided a list of three open ended questions. This portion was optional. 
 <p>Usability page data will go here.<br>
 Remember all images placed here will have to read ../../images/image.jpg to be viewed.</p>
 <h3>Demographics</h3>
