--- a/_designs/usability.html
+++ b/_designs/usability.html
@@ -6,14 +6,13 @@ summary: "Information about the Usability Study conducted on this site"
 <h2>{{ page.title }}</h2>
 <h3>Methods</h3>
 <p>For the usability test all participants were sent a link to the Group B website and a link to the anonymous Google survey. After navigating through site participants were asked to complete the survey. Subjects were also asked if they had any additional feedback about the website, specifically the navigation, design, and content. There were provided a list of three open ended questions. This portion was optional. </p>
-
-<p>Usability page data will go here.<br>
-Remember all images placed here will have to read ../../images/image.jpg to be viewed.</p>
 <h3>Demographics</h3>
 <p>Participants were asked three demographic questions at the beginning of the survey. </p>
 <figure><img src="../../images/demographicschart0.png" alt="chart of Demographic question:Familiar with 3D printing prior to test results"></figure>
 <figure><img src="../../images/demographicschart1.png" alt="chart of Demographic question: Age bracket results"></figure>
 <figure><img src="../../images/demographicschart2.png" alt="chart of Demographic question: How often do you use computers or websites results"></figure>
+<br>
+<h3>Results</h3>
 <section id="designcarousel">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
