removed landing page link from home page, tested and navigation should be working

--- a/_designs/usability.html
+++ b/_designs/usability.html
@@ -5,7 +5,7 @@ summary: "Information about the Usability Study conducted on this site"
 ---
 <h2>{{ page.title }}</h2>
 <h3>Methods</h3>
-<p>For the usability test all participants were sent a link to the Group B website and a link to the anonymous Google survey. After navigating through site participants were asked to complete the survey. Subjects were also asked if they had any additional feedback about the website, specifically the navigation, design, and content. There were provided a list of three open ended questions. This portion was optional. </p>
+<p>For the usability test all participants were sent a link to the Group B website and a link to the anonymous Google survey. After navigating through site participants were asked to complete the survey. Eight of the subjects were also asked if they had any additional feedback about the website, specifically the navigation, design, and content. They were provided a list of three open ended questions. This portion was optional. </p>
 <h3>Demographics</h3>
 <p>Participants were asked three demographic questions at the beginning of the survey. </p>
 <figure><img src="../../images/demographicschart0.png" alt="chart of Demographic question:Familiar with 3D printing prior to test results"></figure>
