--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ layout: base
 </tr>
 </table>
 <section>
-  <h3><a href="https://domlis786.github.io/groupb-wk14/designs/" title="design landing page">Design and Testing Elements</a></h3>
-{% include design_previews.html %}
+  <h3>Design and Testing Elements</h3>
+  <br>
+  <p>Follow the design process of this microsite.</p>
+  <a href="https://domlis786.github.io/groupb-wk14/designs/designprogress/" title="design and process page">Design and Process</a>
+  <p>Information about the Usability Study conducted on this site.</p>
+  <a href="https://domlis786.github.io/groupb-wk14/designs/usability/" title="usability study page">Usability Study</a>
 </section>
