--- a/_designs/designprogress.html
+++ b/_designs/designprogress.html
@@ -1,5 +1,5 @@
 ---
-title: "Design and Progress"
+title: "Design and Process"
 layout: base
 summary: "follow the design process of this microsite"
 ---
