Add li attributes to Design section

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ layout: base
 </tr>
 </table>
 <section>
-  <h3>Design and Testing Elements</h3>
+  <h2>Design and Testing Elements</h2>
   <br>
   <p>Follow the design process of this microsite.</p>
-  <a href="https://domlis786.github.io/groupb-wk14/designs/designprogress/" title="design and process page">Design and Process</a>
-  <p>Information about the Usability Study conducted on this site.</p>
-  <a href="https://domlis786.github.io/groupb-wk14/designs/usability/" title="usability study page">Usability Study</a>
+  <ul>
+    <li><a href="https://domlis786.github.io/groupb-wk14/designs/designprogress/" title="design and process page">Design and Process</a></li>
+  <li><a href="https://domlis786.github.io/groupb-wk14/designs/usability/" title="usability study page">Website Usability Study</a></li></ul>
 </section>
