Update page title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Welcome to the Dominican University 3D printing lab"
+title: "Welcome to the Dominican University 3D Printing Lab"
 layout: base
 ---
 
