Add list results to q. 1-3

--- a/_designs/usability.html
+++ b/_designs/usability.html
@@ -7,10 +7,29 @@ summary: "Information about the Usability Study conducted on this site"
 <h3>Methods</h3>
 <p>For the usability test all participants were sent a link to the Group B website and a link to the anonymous Google survey. After navigating through site participants were asked to complete the survey. Eight of the subjects were also asked if they had any additional feedback about the website, specifically the navigation, design, and content. They were provided a list of three open ended questions. This portion was optional. </p>
 <h3>Demographics</h3>
-<p>Participants were asked three demographic questions at the beginning of the survey. </p>
+<p>Participants were asked three demographic questions at the beginning of the survey:</p>
 <figure><img src="../../images/demographicschart0.png" alt="chart of Demographic question:Familiar with 3D printing prior to test results"></figure>
+<p>Question 1: Were you familiar with 3D printing prior to taking our test?</p>
+<p>Results:</p>
+<ul>
+    <li>66.7% of our participants answered "No"</li>
+    <li>33.3% of our participants answered "Yes"</li>
+</ul>
 <figure><img src="../../images/demographicschart1.png" alt="chart of Demographic question: Age bracket results"></figure>
+<p>Question 2: What is your age bracket?
+<ul>
+    <li>46.7% of our participants selected 30-39 years-old</li>
+    <li>26.7% of our participants selected 20-29 years-old</li>
+    <li>13.3% of our participants selected 40-49 years-old</li>
+    <li>6.65% of our participants selected 13-19 years-old</li>
+    <li>6.65% of our participants selected 50+ years-old</li>
+</ul>
 <figure><img src="../../images/demographicschart2.png" alt="chart of Demographic question: How often do you use computers or websites results"></figure>
+<p>Question 3: How often do you use computers or websites?</p>
+<ul>
+    <li>93.3% of our participants selected "Always"</li>
+    <li>6.7% of our participants selected "Frequently"</li>
+</ul>
 <br>
 <h3>Results</h3>
 <section id="designcarousel">
@@ -28,7 +47,7 @@ summary: "Information about the Usability Study conducted on this site"
             <a href="../../images/homechart.png" title="Is the homepage easy to navigate?"><img class="d-block w-100" src="../../images/homechart.png" alt="chart of question results"></a>
             <div class="carousel-caption d-none d-md-block">
             <h4>Home Page Question</h4>
-            <p> 100% of participants found the homepage easy to navigate</p>
+            <p>100% of participants found the homepage easy to navigate</p>
          </div>
         </div>
     
@@ -52,7 +71,7 @@ summary: "Information about the Usability Study conducted on this site"
             <a href="../../images/FAQchart.png" title="Did your understanding of 3D printing increase?"><img class="d-block w-100" src="../../images/FAQchart.png" alt="chart of question results"></a>
             <div class="carousel-caption d-none d-md-block">
             <h4>FAQ Page Question</h4>
-   <p>80% of particpants reported the page provided explaination about 3D printing in the Rebecca Crown Library. </p>
+   <p>80% of participants reported the page provided explaination about 3D printing in the Rebecca Crown Library. </p>
         </div>
        </div>
 
@@ -60,7 +79,7 @@ summary: "Information about the Usability Study conducted on this site"
             <a href="../../images/Facultychart.png" title="Does the page content peak your interest in 3D printing as coursework?"><img class="d-block w-100" src="../../images/Facultychart.png" alt="chart of question results"></a>
             <div class="carousel-caption d-none d-md-block">
             <h4>Faculty Page Question</h4>
-   <p>Only 53% of particpants reported to be interested in 3D printing as coursework. </p>
+   <p>Only 53% of participants reported to be interested in 3D printing as coursework.</p>
         </div>
        </div>
     
