--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@ layout: base
 </tr>
 </table>
 <section>
-  <h2>Design and Testing Elements</h2>
-  <br>
-  <p>Follow the design process of this microsite.</p>
-  <ul>
-    <li><a href="https://domlis786.github.io/groupb-wk14/designs/designprogress/" title="design and process page">Design and Process</a></li>
-  <li><a href="https://domlis786.github.io/groupb-wk14/designs/usability/" title="usability study page">Website Usability Study</a></li></ul>
+  <h3>Design and Testing Elements</h3>
+{% include design_previews.html %}
 </section>
