move p tag from previews to index

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@ layout: base
 </table>
 <section>
   <h3>Design and Testing Elements</h3>
+  <p>Follow the design process of this microsite.</p>
 {% include design_previews.html %}
 </section>
